modules/core/client/scss/core.scss
/* ... */
.modal-footer {
	padding: 1.5rem 2rem;
	border: none;
	
	.btn {
		min-width: 8rem;
	}
}

.modal-body {
	padding: 2rem;
	background: $modal-body-bg;
}

.modal-alert {
	.modal-content {
		border: none;
	}

	.alert {
		margin-bottom: 0;
	}
}

.modal-alert-backdrop {
	background: transparent;
}


/* PANELS
------------------------------ */ 
.panel-default {
	> .panel-heading {
		position: relative;
		padding: 1.25rem 1.5rem;
		color: $panel-heading-color;
		border-color: $panel-border-color;
		background-image: none;
		background-color: $panel-heading-bg;

		h2 {
			margin: 0;
			display: block;
			overflow: hidden;
			font-size: 1.6rem;
			font-weight: bold;
			text-overflow: ellipsis;
		}
	}
}

.panel-heading {
	&.flex-row {
		display: -webkit-flex;
		display: flex;
		padding: 0;
		
		h2 {
			-webkit-flex: 1 1 auto;
			flex: 1 1 auto;
			padding: 1.25rem 1.5rem;
		}

		.actions {
			-webkit-flex: 1 1 auto;
			flex: 0 0 auto;

			.btn {
				margin-top: 0.6rem;
				margin-right: 0.6rem;
				margin-left: -0.25rem;

				&:hover,
				&:focus {
					background: $btn-focus-bg-color;
					border-color: $btn-focus-border-color;
				}
			}
		}
	}
}

.panel-footer {
	background: $panel-footer-bg;
}


/* PICK LIST
------------------------------ */
$pick-list-active-item-bg: #5cb85c;

.pick-list {
	display: block;
	padding: 1px;
	border: 1px solid #DDD;
	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
	
	.btn {
		display: block;
		margin: 1px;
		font-weight: normal;
		text-align: left;
		border: none;
		border-radius: 0;
		box-shadow: none;
		overflow: hidden;
		text-overflow: ellipsis;
	}
	
	label {
		margin-bottom: 0;
		font-weight: normal;
		text-align: left;
	}
	
	label:active, label:focus {
		color: #FFF;
		background: $pick-list-active-item-bg;
		border-color: $pick-list-active-item-bg;
	}
	
	.active, .active:hover, .active:focus {
		color: #FFF;
		background: $pick-list-active-item-bg;
		border-color: $pick-list-active-item-bg;
		box-shadow: none;
	}
}

/* SECTION
------------------------------ */
section {
	h2 {
		margin-top: 0;
		margin-bottom: 1rem;
		font-size: 1.6rem;
		font-weight: bold;
	}
}


/* TAB NAVIGATION
------------------------------ */
.nav-tabs {
	border-bottom: 4px solid $nav-tab-inactive-border-color;
	
	> li {
		margin-bottom: -4px;

		> a {
			position: relative;
			margin: 0;
			padding: 0.7rem 1.5rem;
			font-size: 1.6rem;
			font-weight: bold;
			color: $nav-tab-inactive-color;
			border: none;
			border-bottom: 4px solid $nav-tab-inactive-border-color;

			&:hover {
				background: transparent;
			}

			.glyphicon {
				position: absolute;
				top: 0.9rem;
				left: 1rem;
				display: none;
				font-size: 1.6rem;
			}
		}

		&.has-error {
			> a {
				padding-left: 3.5rem;
			}

			.glyphicon {
				display: inline-block;
			}
		}

		&.active {
			> a {
				color: $nav-tab-active-color;
				background: transparent;
				border: none;
				border-bottom: 4px solid $nav-tab-active-border-color;
			}

			> a:hover,
			> a:focus {
				color: $nav-tab-active-color;
				background: transparent;
				border: none;
				border-bottom: 4px solid $nav-tab-active-border-color;
			}

			&.has-error {
				> a {
					color: $danger-text;
					border-bottom-color: $danger-border;
					opacity: 1;
				}

				> a:hover,
				> a:focus {
					color: $danger-text;
					border-bottom-color: $danger-border;
				}
			}
		}
	}
}

.tab-pane {
	padding-top: 2rem;
}


/* TABLES
------------------------------ */
.table-th {
	padding: 0.8rem 0.5rem;
	overflow: hidden;
	font-size: 1.2rem;
	text-align: left;
	text-overflow: ellipsis;
	background: $table-head-bg;
	border-bottom: none;
	vertical-align: top;
	white-space: nowrap;
}

.table-td {
	padding: 0.8rem 0.5rem;
}

.first-col {
	padding-left: 1rem;
}

.last-col {
	padding-right: 1rem;
}

.table {
	margin: 0;
	table-layout: fixed;
	background: $table-bg;

	thead {
		> tr {
			> th {
				@extend .table-th;

				&:first-child {
					@extend .first-col;
				}

				&:last-child {
					@extend .last-col;
				}
			}
		}
	}

	tbody {
		> tr {
			> td {
				@extend .table-td;

				&:first-child {
					@extend .first-col;
				}

				&:first-child.select {
					padding-left: 4rem;
				}

				&:last-child {
					@extend .last-col;
				}
			}
		}
	}

	&.table-striped {
		> tbody > tr:nth-of-type(odd) {
			background-color: #f7f8fa;
		}	
	}

	&.table-hover {
		> tbody {
			> tr {
				&.active {
					td {
						color: #FFF;
						background: $table-row-active-bg;
					}
				}
			}
		}

		> tbody > tr:hover {
			background-color: $table-row-hover-bg;
		}

		.no-records:hover {
			background: none;
		}
	}
	
	td.actions-col {
		padding-top: 0;
		padding-right: 0.5rem;
		padding-bottom: 0;
		text-align: right;
		
		.btn {
			margin-top: 0.35rem;
			padding-left: 0.8rem;
			padding-right: 0.8rem;
			background: transparent;
			border-color: transparent;

			&:hover,
			&:focus {
				background: $btn-focus-bg-color;
				border-color: $btn-focus-border-color;
			}
		}
	}

	.no-records {
		td {
			padding: 1rem 1.5rem;
			border: none;
		}
	}
	
	.action-x1 {
		width: 4.5rem;
	}
	
	.action-x2 {
		width: 8.5rem;
	}

	.select-col {
		position: relative;
		padding-left: 3.5rem;

		input[type="checkbox"] {
			position: absolute;
			top: 1rem;
			left: 1rem;
		}	
	}

	.checkbox-col {
		width: 3.25rem;
		padding: 0;
		padding-right: 0.5rem;
		text-align: right;
		vertical-align: middle;
	}
}

.ng-table-sort-header {
	th {
		@extend .table-th;
	}
}

.ng-table-filters {
	background: $table-filter-bg;

	th {
		border-bottom: none;
		font-size: 1.4rem;
		font-weight: normal;
	}

	.input-sm {
		font-size: 1.4rem;
	}
}

.ng-table-page-btn {
	font-size: $ng-table-page-btn-font-size;
	font-weight: $ng-table-page-btn-font-weight;
	color: $app-base-color;
	border: 1px solid $ng-table-page-btn-border-color;
}

.ng-table-page-btn-active {
	color: $ng-table-page-btn-active-color;
	background: $btn-primary-bg;
	border-color: $btn-primary-bg;
}
/* ... */

